BUG 4212,4213: /about not doing inline-login, validation stars not showing
QA:
* Validation stars should show on blobby/href and /about, as well as the about sidebar
* Inline login should work on /about for rating

--- a/app/styles/sass-common.sass
+++ b/app/styles/sass-common.sass
@@ -268,3 +268,6 @@ $light_bg_color: #fafafa
 @mixin drag-handle
   background-image: url(/stylesheets/images/interface/drag_handle.png)
   cursor: move
+
+@mixin required-star
+  background: url(/stylesheets/images/common/required.png) no-repeat left 3px
