--- a/app/styles/screen-blob.sass
+++ b/app/styles/screen-blob.sass
@@ -116,3 +116,7 @@
 
       .ie7 & #uniform-contactPurpose
         width: 13em
+
+      label.required
+        @include required-star
+        padding-left: 1.2em
